tree-sitter/tree-sitter-woowoo/corpus/block/multiple_blocks.txt
==================
Multiple block per one document part
==================

.Chapter Test
  label: one-doc-part
  note:  multiple-blocks


This is a classical multiline block, containing just one thing - a simple text block without any environments.
This is a second line of the same text-block.
This is the last line of this text-block.

This line is also part of the same block, but of a new text-block.
In other words, this is a second text-block occuring in the parent block. Text-block are separated by empty lines.


This is the beginning of a new BLOCK, because the end of the previous block was marked by two empty lines.

---

(source_file
  (document_part
    (document_part_type)
    (document_part_title)
    (meta_block)
    (document_part_body
      (block
        (text_block
          (text )
          (text )
          (text ))
        (text_block
          (text)
          (text)))
      (block
        (text_block
          (text))))))


